--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -5,7 +5,8 @@ containerTemplate(name: 'python', image: 'python:3-alpine', ttyEnabled: true, co
     node(label) {
         stage('Run python') {
             //sh 'python docker/zip_job.py'
-            sh 'pwd'
+            git changelog: false, poll: false, url: 'https://github.com/evyatare92/tufin.git'
+            sh 'cd tufin'
             sh 'ls'
         }
     }
