--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -7,7 +7,7 @@ containerTemplate(name: 'python', image: 'python:3-alpine', ttyEnabled: true, co
             //sh 'python docker/zip_job.py'
             git changelog: false, poll: false, url: 'https://github.com/evyatare92/tufin.git'
             sh 'ls'
-            sh 'python docker/zip_job.py'
+            sh 'python3 docker/zip_job.py'
             //sh 'cd tufin'
             
         }
